fix navbar brand stretched on mobile

--- a/src/styles/sections/nav.scss
+++ b/src/styles/sections/nav.scss
@@ -113,3 +113,7 @@
     max-height: 100%;
   }
 }
+
+#nav-mobile-brand > img {
+  height: 48px;
+}
